# shango_poly

./: .env.example  .gitignore  HONEST_ASSESSMENT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_TX_SIMULATION.md  INTEGRATION_COMPLETE.md  PROTOCOL_EFFICIENCY_SUMMARY.md  QUICKSTART_SIMULATION.md  README.md  REAL_TRANSACTIONS_IMPLEMENTATION.md  SIMULATION_SUMMARY.txt  TEST_LOGIC_VERIFICATION.md  VALIDATION_REPORT.md  VERIFICATION_REPORT.md  index.js  install-yarn.bat  install.bat  package.json  setup-yarn.sh  setup.sh  start-yarn.bat  start.bat  test-results.json
config/: contracts.js  dexes.js  flashLoanABI.json  index.js  tokens.js
contracts/: FlashLoanArbitrage.sol  contract_1_Router.sol  contract_2_HFT.sol
contracts/interfaces/: IDexRouter.sol
docs/: ARCHITECTURE.md  COMPETITION.md  CONFIGURATION.md  DEPLOYMENT.md  GO_LIVE_CHECKLIST.md  ML_INTEGRATION.md  PRODUCTION_OPERATIONS.md  PROTOCOL_EFFICIENCY.md  SETUP.md  SIMULATION.md  TRANSACTION_SIMULATION.md  TROUBLESHOOTING.md
examples/: transaction-simulation-demo.js
rust-engine/: Cargo.toml  README.md  index.js  package.json
rust-engine/.cargo/: config.toml
rust-engine/src/: deduplicator.rs  lib.rs  lightweight_mode.rs  turbo_aggregator.rs  turbo_scanner.rs
scripts/: benchmark-rust-engines.js  bot-competition.js  deploy-contract.sh  run-simulation.js  test-architecture.js  test-comprehensive.js  test-connection.js  test-protocol-efficiency.js  test-real-data.js  test-tx-simulation.js  validate-system.js
src/bot/: ArbitrageBot.js  (+4 more)
(+17 files in other folders)
