[package]
name = "rust-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "2"
napi-derive = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ahash = "0.8"  # Faster hashing for deduplication
parking_lot = "0.12"  # Faster locks
once_cell = "1.19"

[build-dependencies]
napi-build = "2"

[profile.release]
opt-level = 3
lto = true  # Link Time Optimization for better ARM performance
codegen-units = 1  # Better optimization at cost of compile time
strip = true  # Reduce binary size
panic = "abort"  # Smaller binaries
